apps/oxlint/src/snapshots/fixtures__cli__tsgolint_nested_type_aware_extends_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/tsgolint_nested_type_aware_extends
----------

  x typescript(no-floating-promises): Promises must be awaited, add void operator to ignore.
   ,-[packages/app/index.ts:2:1]
 1 | const promise = new Promise((resolve, _reject) => resolve("value"));
 2 | promise;
   : ^^^|^^^^
   :    `-- This unhandled promise-like value has type `Promise<unknown>`.
 3 | 
   `----
  help: The promise must end with a call to .catch, or end with a call to .then with a rejection handler, or be explicitly marked as ignored with the `void` operator.

Found 0 warnings and 1 error.
Finished in <variable>ms on 1 file using 1 threads.
----------
CLI result: LintFoundErrors
----------
